fix text alignment, update logo color in footer

--- a/my-app/src/products/ProductPage.css
+++ b/my-app/src/products/ProductPage.css
@@ -132,7 +132,6 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
   grid-row-gap: 3rem;
-  grid-column-gap: 2rem;
 }
 .mgp-quality__feature-title {
   font-size: 2.4rem;
@@ -173,9 +172,8 @@
 }
 .group-order__price-table {
   display: grid;
-  grid-template-columns: 45% 1fr;
+  grid-template-columns: 1fr 1fr;
   grid-row-gap: 2rem;
-  grid-column-gap: 3rem;
   font-size: 2.6rem;
 }
 .price-group > * {
